pkg/tests/testthat/errors/test_varia1.R
library(isismdl)
library(testthat)

#cmpmdl("../mdl/varia1");
